[Feat] JWT token authorization

--- a/signup.html
+++ b/signup.html
@@ -8,8 +8,8 @@
 
   <title>Signup</title>
 
-  <link rel="stylesheet" href="../static/css/reset.css">
-  <link rel="stylesheet" href="../static/css/signup.css">
+  <link rel="stylesheet" href="/css/reset.css">
+  <link rel="stylesheet" href="/css/signup.css">
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
@@ -18,7 +18,7 @@
   <div class="signup-container">
     <form id="form">
       <h1>회원가입</h1>
-      <p>이미 회원이신가요? <a href="#" class="to-login">로그인하기</a></p>
+      <p>이미 회원이신가요? <a href="login.html" class="to-login">로그인하기</a></p>
 
       <input type="text" id="name" placeholder="이름">
       <input type="text" id="email" placeholder="이메일">
@@ -36,7 +36,7 @@
     </form>
   </div>
 
-<script src="../static/js/send.js"></script>
+<script src="/js/signup.js"></script>
 
 </body>
 
