--- a/index.html
+++ b/index.html
@@ -14,9 +14,14 @@
 <body>
 
 <div class="index-container">
-	<a href="login.html"><div class="login">로그인</div></a>
-	<a href="signup.html"><div class="signup">회원가입</div></a>
+	<a href="login.html"><div id="login" class="login">로그인</div></a>
+	<a href="signup.html"><div id="signup" class="signup">회원가입</div></a>
+    
+    <div id="logout" class="logout">로그아웃</div>
+    <a href="mypage.html"><div id="mypage" class="mypage">마이페이지</div></a>
 </div>
+
+<script src="/js/index.js"></script>
 
 </body>
 
