--- a/login.html
+++ b/login.html
@@ -6,19 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
 
-    <link rel="stylesheet" href="../static/css/reset.css">
-    <link rel="stylesheet" href="../static/css/login.css">
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/login.css">
 </head>
 <body>
     <div class="login-container">
         <h1>로그인</h1>
         <form id="form">
-            <input type="text" id="email" class="email" placeholder="이메일">
+            <label for="email">이메일</label>
+            <input type="text" id="email" class="email" placeholder="이메일을 입력하세요.">
+
+            <label for="password">비밀번호</label>
             <input type="password" id="password" class="password" placeholder="비밀번호">
+
             <button type="submit" id="submit" class="submit">로그인</button>
         </form>
+        <div id="naver"></div>
+        <div id="kakao"></div>
+        <div id="normal"></div>
+        <p class="new">처음이신가요? <a href="signup.html">회원가입하기</a></p>
     </div>
 
-    <script src="../static/js/login.js"></script>
+    <script src="/js/login.js"></script>
 </body>
 </html>
