--- a/index.html
+++ b/index.html
@@ -13,12 +13,20 @@
 
 <body>
 
-<div class="index-container">
-	<a href="login.html"><div id="login" class="login">로그인</div></a>
-	<a href="signup.html"><div id="signup" class="signup">회원가입</div></a>
-    
-    <div id="logout" class="logout">로그아웃</div>
-    <a href="mypage.html"><div id="mypage" class="mypage">마이페이지</div></a>
+
+<div id="welcome-content">
+    <div class="message">
+        <h1>Welcome!</h1>
+        <p>REST API 구현 연습을 위한 웹사이트입니다.</p>
+    </div>
+    <nav>
+        <ul>
+            <li><a href="login.html" id="login">로그인</a></li>
+            <li><a href="signup.html" id="signup">회원가입</a></li>
+            <li><a id="mypage">마이페이지</a></li>
+            <li><a id="logout">로그아웃</a></li>
+        </ul>
+    </nav>
 </div>
 
 <script src="/js/index.js"></script>
