--- a/mypage.html
+++ b/mypage.html
@@ -9,6 +9,8 @@
 
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/mypage.css">
+
+    <script src="/js/auth.js"></script>
 </head>
 <body>
     <div class="mypage-container">
