[Fix] token authentication mypage

--- a/public/index.html
+++ b/public/index.html
@@ -12,21 +12,28 @@
 	<link rel="stylesheet" href="/css/index.css">
 <body>
 
-
-<div id="welcome-content">
-    <div class="message">
-        <h1>Welcome!</h1>
-        <p>REST API 구현 연습을 위한 웹사이트입니다.</p>
+    <div id="welcome-content">
+        <div class="message">
+            <h1>Welcome!</h1>
+            <p>REST API 구현 연습을 위한 웹사이트입니다.</p>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="login.html" id="login">로그인</a></li>
+                <li><a href="signup.html" id="signup">회원가입</a></li>
+                <li><a id="mypage">마이페이지</a></li>
+                <li><a id="logout">로그아웃</a></li>
+            </ul>
+        </nav>
     </div>
-    <nav>
-        <ul>
-            <li><a href="login.html" id="login">로그인</a></li>
-            <li><a href="signup.html" id="signup">회원가입</a></li>
-            <li><a id="mypage">마이페이지</a></li>
-            <li><a id="logout">로그아웃</a></li>
-        </ul>
-    </nav>
-</div>
+
+    <div id="modal" class="modal">
+        <div class="modal-content">
+            <span id="closeModalButton" class="close">&times;</span>
+            <h2>Modal Title</h2>
+            <p>This is the content of the modal.</p>
+        </div>
+    </div>
 
 <script src="/js/index.js"></script>
 
