[Fix] token authentication mypage

--- a/public/index.html
+++ b/public/index.html
@@ -30,8 +30,9 @@
     <div id="modal" class="modal">
         <div class="modal-content">
             <span id="closeModalButton" class="close">&times;</span>
-            <h2>Modal Title</h2>
-            <p>This is the content of the modal.</p>
+            <h1>마이페이지</h1>
+            <h2>이름: </h2>
+            <h2>이메일: </h2>
         </div>
     </div>
 
