[Fix] index > mypage modal add

--- a/public/index.html
+++ b/public/index.html
@@ -31,8 +31,8 @@
         <div class="modal-content">
             <span id="closeModalButton" class="close">&times;</span>
             <h2>마이페이지</h2>
-            <h2>이름: </h2>
-            <h2>이메일: </h2>
+            <h2 id="name">이름: </h2>
+            <h2 id="email">이메일: </h2>
         </div>
     </div>
 
