[Fix] refreshtoken logic edit

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
                 <li><a href="signup.html" id="signup">회원가입</a></li>
                 <li><a id="mypage">마이페이지</a></li>
                 <li><a id="logout">로그아웃</a></li>
+                <li><a id="aboutus">About us</a></li>
             </ul>
         </nav>
     </div>
@@ -33,6 +34,7 @@
             <h2>마이페이지</h2>
             <h2 id="name">이름: </h2>
             <h2 id="email">이메일: </h2>
+            <button type="button">비밀번호 변경</button>
         </div>
     </div>
 
