--- a/public/index.html
+++ b/public/index.html
@@ -32,8 +32,10 @@
         <div class="modal-content">
             <span id="closeModalButton" class="close">&times;</span>
             <h2>마이페이지</h2>
-            <h2 id="name">이름: </h2>
-            <h2 id="email">이메일: </h2>
+            <h2>이름: </h2>
+            <p id="name"></p>
+            <h2">이메일: </h2>
+            <p id="email"></p>
             <button type="button">비밀번호 변경</button>
         </div>
     </div>
