[Fix] mypage modal edit

--- a/public/index.html
+++ b/public/index.html
@@ -32,10 +32,10 @@
         <div class="modal-content">
             <span id="closeModalButton" class="close">&times;</span>
             <h2>마이페이지</h2>
-            <h3>이름: </h3>
-            <p id="name"> </p>
-            <h3>이메일: </h3>
-            <p id="email"> </p>
+            <h3>이름</h3>
+            <p id="name"></p>
+            <h3>이메일</h3>
+            <p id="email"></p>
             <button type="button">비밀번호 변경</button>
         </div>
     </div>
