[Fix] mypage modal edit

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,11 @@
             <p id="name"></p>
             <h3>이메일</h3>
             <p id="email"></p>
-            <button type="button">비밀번호 변경</button>
+            <form id="form">
+                <input type="text" id="original-pwd" placeholder="현재 비밀번호">
+                <input type="text" id="new-pwd" placeholder="새 비밀번호">
+                <button type="button" id="pass-change">비밀번호 변경</button>
+            </form>
         </div>
     </div>
 
